--- a/vaiv-easy-starter/src/main/resources/application.properties
+++ b/vaiv-easy-starter/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.password=password
+spring.datasource.url=jdbc:mariadb://localhost:3306/vaiv
+spring.datasource.username=user
+spring.flyway.enabled=true
